kubernetes/base/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: default
  labels:
    app: product-deployment
spec:
  selector:
    app: product-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: product-mongo-svc
  namespace: default
  labels:
    app: product-mongo-dp
spec:
  selector:
    app: product-mongo-dp
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
