kubernetes/base/product-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-product-dp-to-db
spec:
  podSelector:
    matchLabels:
      app: product-mongo-dp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: product-deployment
